--- a/pytorchpractise.ipynb
+++ b/pytorchpractise.ipynb
@@ -93,6 +93,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('issue with git push')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
