--- a/python.ipynb
+++ b/python.ipynb
@@ -391,15 +391,555 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
    "source": [
     "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
     "mylist = thislist.copy()\n",
     "print(mylist)\n",
     "mylist = thislist #copy refrence so chnages in thislist can be refrelet to  mylist"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry']\n",
+      "['apple', 'banana', 'cherry', 'rimsha']\n",
+      "['apple', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "mylist = thislist[:]#slice operator\n",
+    "print(mylist)\n",
+    "thislist.append('rimsha')\n",
+    "print(thislist)\n",
+    "print(mylist)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuple1 = (\"apple\", \"banana\", \"cherry\")\n",
+    "#tuple1[0] = 'rimsha'# not allowed "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#When we create a tuple, we normally assign values to it. This is called \"packing\" a tuple:\n",
+    "fruits = (\"apple\", \"banana\", \"cherry\")\n",
+    "(green, yellow, red) = fruits #unpacking tuples\n",
+    "fruits = (\"apple\", \"banana\", \"cherry\", \"strawberry\", \"raspberry\")\n",
+    "(green, yellow, *red) = fruits# red is list of remaining elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('apple', 'banana', 'cherry', 'apple', 'banana', 'cherry')\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = (\"apple\", \"banana\", \"cherry\")\n",
+    "mytuple = fruits * 2\n",
+    "print(mytuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'mango', 'papaya', 'cherry', 'banana', 'pineapple', 'orange'}\n",
+      "{'mango', 'papaya', 'cherry', 'banana', 'pineapple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Set items can appear in a different order every time you use them, and cannot be referred to by index or key.\n",
+    "#Once a set is created, you cannot change its items, but you can add new items.\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\", \"apple\"}\n",
+    "thisset.add(\"orange\")\n",
+    "tropical = {\"pineapple\", \"mango\", \"papaya\"}\n",
+    "thisset.update(tropical)\n",
+    "print(thisset)\n",
+    "thisset.remove(\"orange\")\n",
+    "thisset.discard(\"orange\")\n",
+    "thisset.pop()\n",
+    "print(thisset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 'b', 2, 3, 'a', 'c'}\n",
+      "{1, 'b', 2, 3, 'a', 'c'}\n",
+      "{1, 2, 3, 'a'}\n",
+      "{'a'}\n",
+      "{'b', 'c'}\n",
+      "{'b', 'c'}\n",
+      "{1, 2, 3, 'c', 'b', 'a'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"a\", \"b\", \"c\"}\n",
+    "set2 = {1, 2, 3,\"a\"}\n",
+    "\n",
+    "set3 = set1.union(set2)\n",
+    "print(set3)\n",
+    "set4 = set1 | set2 # allow to join sets only not any other datatypes but using union you can join set with othwer datatypes\n",
+    "print(set4)\n",
+    "print(set.intersection(set2))\n",
+    "print(set1 & set2)\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)\n",
+    "set1.difference_update(set2)\n",
+    "print(set1)\n",
+    "set3 = set1.symmetric_difference(set2)\n",
+    "print(set3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cherry', 'google', 'microsoft', 'banana'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"apple\", \"banana\", \"cherry\"}\n",
+    "set2 = {\"google\", \"microsoft\", \"apple\"}\n",
+    "\n",
+    "set3 = set1 ^ set2\n",
+    "print(set3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ford\n",
+      "dict_keys(['brand', 'model', 'year'])\n",
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964, 'color': 'white'}\n",
+      "No, 'model' is not one of the keys in the\n",
+      "{'brand': 'Ford', 'year': 2020, 'color': 'white'}\n",
+      "brand\n",
+      "Ford\n",
+      "year\n",
+      "2020\n",
+      "color\n",
+      "white\n",
+      "brand Ford\n",
+      "year 2020\n",
+      "color white\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "thisdict = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "x = thisdict[\"model\"]\n",
+    "x = thisdict.get(\"brand\")\n",
+    "print(x)\n",
+    "print(thisdict.keys())\n",
+    "thisdict[\"color\"] = \"white\"\n",
+    "print(thisdict)\n",
+    "if \"swift\" in thisdict:\n",
+    "  print(\"Yes, 'model' is one of the keys in the thisdict dictionary\")\n",
+    "else:\n",
+    "  print(\"No, 'model' is not one of the keys in the\")\n",
+    "thisdict.update({\"year\": 2020})#if not exists it will be created\n",
+    "thisdict.pop(\"model\")\n",
+    "print(thisdict)\n",
+    "for x in thisdict:\n",
+    "  print(x)\n",
+    "  print(thisdict[x])\n",
+    "#can loop botth\n",
+    "for x, y in thisdict.items():\n",
+    "  print(x, y)\n",
+    "mydict = thisdict.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emil\n",
+      "child1\n",
+      "name: Emil\n",
+      "year: 2004\n",
+      "child2\n",
+      "name: Tobias\n",
+      "year: 2007\n",
+      "child3\n",
+      "name: Linus\n",
+      "year: 2011\n"
+     ]
+    }
+   ],
+   "source": [
+    "myfamily = {\n",
+    "  \"child1\" : {\n",
+    "    \"name\" : \"Emil\",\n",
+    "    \"year\" : 2004\n",
+    "  },\n",
+    "  \"child2\" : {\n",
+    "    \"name\" : \"Tobias\",\n",
+    "    \"year\" : 2007\n",
+    "  },\n",
+    "  \"child3\" : {\n",
+    "    \"name\" : \"Linus\",\n",
+    "    \"year\" : 2011\n",
+    "  }\n",
+    "}\n",
+    "print(myfamily['child1']['name'])\n",
+    "for x, obj in myfamily.items():\n",
+    "  print(x)\n",
+    "\n",
+    "  for y in obj:\n",
+    "    print(y + ':', obj[y])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "8\n",
+      "11\n",
+      "14\n",
+      "17\n",
+      "20\n",
+      "23\n",
+      "26\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(2, 30, 3):\n",
+    "  print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(*nargumets):\n",
+    "    for x in nargumets:\n",
+    "        return x\n",
+    "    \n",
+    "\n",
+    "print(fun(1,2,3,45))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "His last name is Refsnes\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function(**kid):\n",
+    "  print(\"His last name is \" + kid[\"lname\"])\n",
+    "\n",
+    "my_function(fname = \"Tobias\", lname = \"Refsnes\")\n",
+    "def my_function(x, /): #positional argument\n",
+    "  print(x)\n",
+    "\n",
+    "my_function(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = lambda a, b : a * b\n",
+    "print(x(5, 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ramsha\n",
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Use the __init__() function to assign values to object properties, or other operations that are necessary to do when the object is being created:\n",
+    "class Person:\n",
+    "  def __init__(self, name, age):\n",
+    "    self.name = name\n",
+    "    self.age = age\n",
+    "\n",
+    "p1 = Person(\"Ramsha\", 24)\n",
+    "\n",
+    "print(p1.name)\n",
+    "print(p1.age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rimsha\n"
+     ]
+    }
+   ],
+   "source": [
+    "#The __str__() function controls what should be returned when the class object is represented as a string.\n",
+    "class Person:\n",
+    "  def __init__(self, name, age):\n",
+    "    self.name = name\n",
+    "    self.age = age\n",
+    "\n",
+    "  def __str__(self):\n",
+    "    return f\"{self.name}({self.age})\"\n",
+    "  def pname(self):\n",
+    "    return self.name\n",
+    "  \n",
+    "\n",
+    "p1 = Person(\"John\", 36)\n",
+    "\n",
+    "\n",
+    "class child1(Person):\n",
+    "  pass\n",
+    "\n",
+    "\n",
+    "x = child1('rimsha',25)\n",
+    "print(x.pname())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drive!\n",
+      "Sail!\n",
+      "Fly!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student(Person):\n",
+    "  def __init__(self, fname, lname):\n",
+    "    Person.__init__(self, fname, lname)\n",
+    "    super().__init__(fname, lname)#also assign like this\n",
+    "\n",
+    "#ploymorphism e can have multiple classes with the same method name.\n",
+    "class Car:\n",
+    "  def __init__(self, brand, model):\n",
+    "    self.brand = brand\n",
+    "    self.model = model\n",
+    "\n",
+    "  def move(self):\n",
+    "    print(\"Drive!\")\n",
+    "\n",
+    "class Boat:\n",
+    "  def __init__(self, brand, model):\n",
+    "    self.brand = brand\n",
+    "    self.model = model\n",
+    "\n",
+    "  def move(self):\n",
+    "    print(\"Sail!\")\n",
+    "\n",
+    "class Plane:\n",
+    "  def __init__(self, brand, model):\n",
+    "    self.brand = brand\n",
+    "    self.model = model\n",
+    "\n",
+    "  def move(self):\n",
+    "    print(\"Fly!\")\n",
+    "\n",
+    "car1 = Car(\"Ford\", \"Mustang\")       #Create a Car class\n",
+    "boat1 = Boat(\"Ibiza\", \"Touring 20\") #Create a Boat class\n",
+    "plane1 = Plane(\"Boeing\", \"747\")     #Create a Plane class\n",
+    "\n",
+    "for x in (car1, boat1, plane1):\n",
+    "  x.move()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc():\n",
+    "  global x\n",
+    "  x = 300\n",
+    "\n",
+    "myfunc()\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc1():\n",
+    "  x = \"Jane\"\n",
+    "  def myfunc2():\n",
+    "    nonlocal x\n",
+    "    x = \"hello\"\n",
+    "  myfunc2()\n",
+    "  return x\n",
+    "\n",
+    "print(myfunc1())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#modules like libraray\n",
+    "def greeting(name):\n",
+    "  print(\"Hello, \" + name) #save this in mymodule.py\n",
+    "import mymodule\n",
+    "\n",
+    "mymodule.greeting(\"Rismha\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
