--- a/pytorchpractise.ipynb
+++ b/pytorchpractise.ipynb
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.5367, 0.3270, 0.1402, 0.0904, 0.1403],\n",
-      "        [0.8983, 0.4773, 0.8297, 0.3019, 0.4264],\n",
-      "        [0.6908, 0.0366, 0.1419, 0.0252, 0.7350]])\n"
+      "tensor([[0.5629, 0.8027, 0.7972, 0.7440, 0.1069],\n",
+      "        [0.4713, 0.1296, 0.3668, 0.6467, 0.8936],\n",
+      "        [0.3450, 0.4716, 0.3866, 0.7962, 0.4867]])\n"
      ]
     }
    ],
@@ -84,25 +84,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+      "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0])\n"
+     ]
+    }
+   ],
    "source": [
-    " #tensor array of numbers which represents data\n"
+    " #tensor array of numbers which represents data in range\n",
+    "one_to_ten = torch.arange(start=1,end=10,step=1)\n",
+    "print(one_to_ten)\n",
+    "print(torch.zeros_like(one_to_ten))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "issue with git push\n"
+     ]
+    }
+   ],
    "source": [
     "print('issue with git push')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -196,9 +216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.8671, 0.9788, 0.3323, 0.2699],\n",
+      "         [0.0576, 0.5491, 0.8922, 0.5521],\n",
+      "         [0.4977, 0.9989, 0.8197, 0.2644]]])\n"
+     ]
+    }
+   ],
    "source": [
     "#random tensor\n",
     "r = torch.rand(1,3,4)\n",
@@ -207,57 +237,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[2.6368e-01, 3.4439e-01, 2.5634e-01,  ..., 5.9213e-01,\n",
-      "          6.2377e-01, 5.5124e-01],\n",
-      "         [5.2513e-01, 4.6652e-01, 4.1178e-02,  ..., 3.2943e-01,\n",
-      "          6.2505e-03, 8.4018e-01],\n",
-      "         [1.7166e-01, 4.6423e-01, 1.1011e-01,  ..., 4.1075e-01,\n",
-      "          7.8770e-01, 3.5619e-01],\n",
+      "tensor([[[0.8273, 0.2176, 0.6781,  ..., 0.3763, 0.5278, 0.8221],\n",
+      "         [0.2485, 0.7334, 0.7902,  ..., 0.2757, 0.5687, 0.7957],\n",
+      "         [0.8519, 0.5695, 0.0254,  ..., 0.9659, 0.3879, 0.0579],\n",
       "         ...,\n",
-      "         [3.0107e-01, 4.1206e-01, 2.5907e-01,  ..., 5.0657e-01,\n",
-      "          1.4321e-01, 9.2575e-01],\n",
-      "         [2.4978e-01, 9.4226e-01, 6.1109e-01,  ..., 3.2590e-01,\n",
-      "          2.0269e-01, 5.5346e-01],\n",
-      "         [8.9187e-01, 7.2272e-01, 3.0036e-01,  ..., 6.6440e-01,\n",
-      "          8.2392e-01, 2.2167e-01]],\n",
+      "         [0.9953, 0.5685, 0.1497,  ..., 0.2984, 0.3096, 0.6002],\n",
+      "         [0.3783, 0.8942, 0.4477,  ..., 0.3407, 0.1655, 0.0536],\n",
+      "         [0.6057, 0.0886, 0.9439,  ..., 0.0543, 0.2557, 0.7070]],\n",
       "\n",
-      "        [[8.0869e-01, 8.9221e-01, 7.4185e-01,  ..., 1.8768e-01,\n",
-      "          4.3045e-01, 3.2924e-01],\n",
-      "         [5.5449e-01, 9.2544e-01, 8.7458e-01,  ..., 7.0273e-01,\n",
-      "          6.9369e-01, 8.7453e-01],\n",
-      "         [5.7842e-01, 4.3991e-01, 4.8115e-01,  ..., 1.5831e-02,\n",
-      "          5.2508e-01, 7.5933e-01],\n",
+      "        [[0.0156, 0.2206, 0.9881,  ..., 0.5597, 0.0917, 0.0086],\n",
+      "         [0.8281, 0.8685, 0.2302,  ..., 0.8320, 0.2437, 0.9868],\n",
+      "         [0.2212, 0.3097, 0.1186,  ..., 0.2607, 0.0335, 0.1923],\n",
       "         ...,\n",
-      "         [5.4826e-01, 5.5923e-01, 4.4275e-01,  ..., 5.0409e-01,\n",
-      "          3.8704e-01, 5.9023e-02],\n",
-      "         [8.9033e-01, 8.8888e-01, 9.3544e-01,  ..., 9.0210e-01,\n",
-      "          4.5841e-01, 6.8631e-01],\n",
-      "         [8.4933e-02, 2.8563e-01, 8.0392e-01,  ..., 9.8822e-02,\n",
-      "          3.4604e-01, 1.7049e-01]],\n",
+      "         [0.7128, 0.5784, 0.8537,  ..., 0.4339, 0.2773, 0.6606],\n",
+      "         [0.1868, 0.4252, 0.8710,  ..., 0.6760, 0.6197, 0.8074],\n",
+      "         [0.3874, 0.8357, 0.1369,  ..., 0.6350, 0.4440, 0.2998]],\n",
       "\n",
-      "        [[4.6023e-01, 4.4554e-01, 3.2931e-01,  ..., 3.3570e-01,\n",
-      "          6.1277e-01, 6.3647e-01],\n",
-      "         [2.8881e-01, 6.0742e-01, 8.4475e-01,  ..., 3.0732e-04,\n",
-      "          8.8965e-01, 9.8444e-02],\n",
-      "         [5.3301e-02, 7.8194e-01, 2.1506e-01,  ..., 1.6389e-01,\n",
-      "          7.1308e-02, 2.4126e-01],\n",
+      "        [[0.7696, 0.5155, 0.7240,  ..., 0.9274, 0.2003, 0.9681],\n",
+      "         [0.1030, 0.7188, 0.9261,  ..., 0.1140, 0.6722, 0.4024],\n",
+      "         [0.3542, 0.9948, 0.6483,  ..., 0.6332, 0.5991, 0.4841],\n",
       "         ...,\n",
-      "         [6.4971e-01, 5.0468e-01, 2.0942e-01,  ..., 8.8096e-01,\n",
-      "          6.4281e-01, 4.3586e-01],\n",
-      "         [6.4185e-01, 2.5386e-01, 9.4874e-01,  ..., 2.0154e-01,\n",
-      "          1.3350e-01, 9.9250e-01],\n",
-      "         [7.0974e-01, 5.0443e-01, 3.9389e-01,  ..., 1.2892e-01,\n",
-      "          9.8799e-02, 2.0896e-01]]])\n",
+      "         [0.1921, 0.0387, 0.4574,  ..., 0.5846, 0.3080, 0.8487],\n",
+      "         [0.4159, 0.6946, 0.9648,  ..., 0.9071, 0.5357, 0.5478],\n",
+      "         [0.7220, 0.3223, 0.5910,  ..., 0.7634, 0.8879, 0.2720]]])\n",
       "torch.Size([3, 244, 244])\n",
       "3\n",
-      "tensor(0.4812)\n"
+      "tensor(0.1186)\n"
      ]
     }
    ],
@@ -271,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -299,17 +311,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([3., 6., 9.])\n"
+     ]
+    }
+   ],
    "source": [
-    "#creating a range"
+    "#torch dtypes\n",
+    "float32 = torch.tensor([3.0,6.0,9.0 ],\n",
+    "                       dtype=None,\n",
+    "                       device='cpu',\n",
+    "                       requires_grad=False)\n",
+    "print(float32)\n",
+    "#3 common erros whie dealing with dtypoes in torch\n",
+    "#1. tensor not right dtype\n",
+    "#2. tensor not right shape\n",
+    "#3. tensor not on right device"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Adam",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
